@@ -1,9 +1,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>fr.insee.eno</groupId>
 	<artifactId>eno-core</artifactId>
-	<version>2.2.1-dev-fo-style-parameters</version>
+
+	<version>2.2.10-dev-lunatic-logement</version>
+
+
 	<packaging>jar</packaging>
 
 	<name>Eno – Questionnaire generator</name>
@@ -30,8 +34,8 @@
 	</issueManagement>
 
 	<ciManagement>
-		<system>Travis</system>
-		<url>https://travis-ci.org/InseeFr/Eno</url>
+		<system>Github Worflow</system>
+		<url>https://github.com/InseeFr/Eno/actions</url>
 	</ciManagement>
 
 	<distributionManagement>
@@ -46,25 +50,35 @@
 	</distributionManagement>
 
 	<properties>
-		<guice.version>4.1.0</guice.version>
-		<commons-io.version>2.5</commons-io.version>
-		<saxon.version>9.7.0-8</saxon.version>
+		<guice.version>5.0.1</guice.version>
+		<commons-io.version>2.11.0</commons-io.version>
+		<saxon.version>10.5</saxon.version>
 		<fop.version>2.2</fop.version>
-		<xalan.version>2.7.1</xalan.version>
-		<slf4j.version>1.7.25</slf4j.version>
+		<xalan.version>2.7.2</xalan.version>
+		<slf4j.version>1.7.32</slf4j.version>
 		<eclipse.version>2.6.0</eclipse.version>
 		<jaxb-api.version>2.3.1</jaxb-api.version>
 
 		<apache-commons.version>3.5</apache-commons.version>
-		<junit.version>4.13.1</junit.version>
+		<junit.version>5.7.2</junit.version>
 		<xmlunit.version>2.3.0</xmlunit.version>
 		<log4j-slf4j.version>2.11.0</log4j-slf4j.version>
 
-		<source.plugin.version>3.0.1</source.plugin.version>
-		<javadoc.plugin.version>3.0.0</javadoc.plugin.version>
+
+		<source.plugin.version>3.2.1</source.plugin.version>
+		<javadoc.plugin.version>3.2.0</javadoc.plugin.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<maven.compiler.source>1.8</maven.compiler.source>
-		<maven.compiler.target>1.8</maven.compiler.target>
+		<maven.compiler.source>11</maven.compiler.source>
+		<maven.compiler.target>11</maven.compiler.target>
+
+					<!-- Configuration Sonar -->
+		<jacoco.version>0.8.7</jacoco.version>	
+		<sonar.core.codeCoveragePlugin>jacoco</sonar.core.codeCoveragePlugin>
+		<sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
+        <sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
+		<sonar.projectName>Eno-WS</sonar.projectName>
+        <sonar.language>java</sonar.language>
+		<argLine>-Xms256m -Xmx512m -XX:MaxPermSize=128m -ea -Dfile.encoding=UTF-8</argLine>
 	</properties>
 
 	<dependencies>
@@ -112,8 +126,8 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-engine</artifactId>
 			<version>${junit.version}</version>
 			<scope>test</scope>
 		</dependency>
@@ -127,7 +141,7 @@
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-slf4j-impl</artifactId>
 			<version>${log4j-slf4j.version}</version>
-			<scope>compile</scope>
+			<scope>test</scope>
 		</dependency>
 
 		<!-- Jaxb -->
@@ -188,12 +202,11 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.22.0</version>
+				<version>2.22.2</version>
 				<configuration>
 					<encoding>UTF-8</encoding>
-					<inputEncoding>UTF-8</inputEncoding>
-					<outputEncoding>UTF-8</outputEncoding>
-					<argLine>-Dfile.encoding=UTF-8 -Djavax.xml.bind.JAXBContextFactory=org.eclipse.persistence.jaxb.JAXBContextFactory</argLine>
+					<argLine>-Dfile.encoding=UTF-8
+						-Djavax.xml.bind.JAXBContextFactory=org.eclipse.persistence.jaxb.JAXBContextFactory</argLine>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -228,7 +241,7 @@
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>build-helper-maven-plugin</artifactId>
-				<version>1.7</version>
+				<version>3.2.0</version>
 				<executions>
 					<execution>
 						<id>add-source</id>
@@ -266,6 +279,7 @@
 									<value>INFO</value>
 								</property>
 							</systemProperties>
+							<classpathScope>test</classpathScope>
 
 						</configuration>
 					</execution>
@@ -318,13 +332,17 @@
 								<goals>
 									<goal>jar</goal>
 								</goals>
+								<configuration>
+									<failOnError>false</failOnError>
+								</configuration>
+
 							</execution>
 						</executions>
 					</plugin>
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-gpg-plugin</artifactId>
-						<version>1.6</version>
+						<version>3.0.1</version>
 						<executions>
 							<execution>
 								<id>sign-artifacts</id>
@@ -346,6 +364,39 @@
 							<autoReleaseAfterClose>true</autoReleaseAfterClose>
 						</configuration>
 					</plugin>
+										 <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>${jacoco.version}</version>
+                <executions>
+                    <!-- Prepare the property pointing to the JaCoCo runtime agent which is
+                         passed as VM argument when the Maven Surefire plugin is executed. -->
+                    <execution>
+                        <id>pre-unit-test</id>
+                        <goals>
+                            <goal>prepare-agent</goal>
+                        </goals>
+                        <configuration>
+                            <!-- Set the name of the property containing the settings for JaCoCo
+                                 runtime agent. -->
+                            <propertyName>surefireArgLine</propertyName>
+                            <append>true</append>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>post-unit-test</id>
+                        <phase>test</phase>
+                        <goals>
+                            <goal>report</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.sonarsource.scanner.maven</groupId>
+                <artifactId>sonar-maven-plugin</artifactId>
+                <version>3.9.0.2155</version>
+            </plugin>
 				</plugins>
 			</build>
 		</profile>
@@ -367,6 +418,12 @@
 		<developer>
 			<name>Laurent Caouissin</name>
 		</developer>
+		<developer>
+			<name>Ophélie Rogel</name>
+		</developer>
+		<developer>
+			<name>Athémane Dahmouh</name>
+		</developer>
 	</developers>
 
 	<contributors>
@@ -378,6 +435,12 @@
 		</contributor>
 		<contributor>
 			<name>Heïdi Koumarianos</name>
+		</contributor>
+		<contributor>
+			<name>Anne Husseini-Skalitz</name>
+		</contributor>
+		<contributor>
+			<name>Fabienne Perray-Gibert</name>
 		</contributor>
 	</contributors>
 
